# umbral-landing

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  check_users.py  main.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  startup.sh
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_schema.py  20260214_0353_7783f41b4762_add_milestone_id_to_chat_sessions.py  20260216_1450_6fee2c7e3774_add_early_access_table.py  20260218_0138_cc50bca6d646_add_deleted_status_to_project.py  20260218_1500_add_task_deleted_status_and_chat_task_id.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  concepts.py  dashboard.py  deployments.py  early_access.py  learnings.py  milestones.py  projects.py  tasks.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  activity_log.py  chat_message.py  chat_session.py  concept.py  concept_relationship.py  deployment.py  deployment_metrics.py  early_access.py  learning.py  milestone.py  project.py  task.py  user.py  user_stats.py
backend/app/schemas/: __init__.py  chat.py  concept.py  dashboard.py  deployment.py  early_access.py  learning.py  milestone.py  project.py  task.py  user.py
backend/app/services/: __init__.py  activity_service.py  ai_service.py  chat_service.py  concept_service.py  dashboard_service.py  deployment_service.py  early_access_service.py  learning_service.py  milestone_service.py  project_service.py  task_service.py  user_service.py
docker/: .env.docker  (+2 more)
(+119 files in other folders)
